--- a/mainapp/templates/mainapp/doc_new.html
+++ b/mainapp/templates/mainapp/doc_new.html
@@ -103,26 +103,13 @@
             Услуги группы компаний "Стандарт-Диагностика":
           </p>
           <div class="list__service__column">
-            <p class="small__column__text">
-              <a href="{% url 'atso' %}">Аттестация сварщиков и <br> специалистов
-                сварочного производства</a>
-            </p>
-            <p class="small__column__text">
-              <a href="{% url 'lab' %}#page-top"> Лаборатория разрушающего и неразрушающего контроля</a>
-            </p>
-            <p class="small__column__text">
-              <a href="{% link_holder 'ATTST' %}#page-top"> {% title_holder 'ATTST' %} </a>
-            </p>
-            <p class="small__column__text">
-              <a href="{% link_holder 'ATTSO' %}#page-top"> {% title_holder 'ATTSO' %} </a>
-            </p>
-            <p class="small__column__text">
-              <a href="{% link_holder 'ATTSM' %}#page-top"> {% title_holder 'ATTSM' %} </a>
-            </p>
-            <p class="small__column__text">
-              <a href="{% link_holder 'UCHEBNIY_CENTR' %}#page-top">{% title_holder 'UCHEBNIY_CENTR' %}</a>
-            </p>
-          </div>
+            <p class="small__column__text"><a href="{% url 'atso' %}#page-top"> Аттестация сварочного оборудования</a></p>
+            <p class="small__column__text"><a href="{% url 'acsm' %}#page-top"> Аттестация сварочных материалов</a></p>               
+            <p class="small__column__text"><a href="{% url 'acst' %}#page-top"> Аттестация производственной технологии сварки (наплавки)</a></p>               
+            <p class="small__column__text"><a href="{% url 'atsssp' %}#page-top">Аттестация сварщиков</a></p>               
+            <p class="small__column__text"><a href="{% url 'lab' %}#page-top"> Испытательная лаборатория</a></p>               
+</div>
+
         </div>
       </div>
   
