--- a/mainapp/templates/mainapp/laboratoriya.html
+++ b/mainapp/templates/mainapp/laboratoriya.html
@@ -4,7 +4,7 @@
 {% block content %}
 
    <div class="box_content_page">
-        <div class="container">
+        <div class="container" id="page-top">
 
                 <button class="back__to__main">
                     <a href="index.html"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
