--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -7,13 +7,13 @@
 
             <div class="col-xl-6">
                 <div class="header__name">
-                    <p class="">Группа компаний "Стандарт Диагностик"</p>
+                    <p class="">Группа компаний "Стандарт-Диагностика"</p>
                 </div>
-                <div class="content__text__info__box">               
-                
+                <div class="content__text__info__box">
+
                     <p class="text__medium">
                         Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году.
-                        Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996 г.
+                        Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996г.
                     </p>
                     <div class="box_content_info_center">
                         <p class="content_info_center">
@@ -33,7 +33,7 @@
                         <p class="content_info_center">
                                 В 2011 г. Министерством здравоохранения и социального развития РФ наша организация внесена в реестр аккредитованных организаций, оказывающие услуги в области охраны труда под регистрационным номером № 2234 от 08.11.2011г. (Уведомление от 30.11.2011 г.)
                         </p>
-                    </div>              
+                    </div>
                     <div class="link__read__more">
                         <a href="{% url 'center' %}#page-top" class="read__more__link">
                             Подробнее об организации <img src="{% static 'img/arrow__next.png' %}" alt="">
@@ -43,7 +43,7 @@
             </div>
 
 <div class="col-xl-1">
-    
+
 </div>
             <div class="col-xl-5">
                 {% include 'mainapp/includes/services_menu.html' %}
