--- a/mainapp/templates/mainapp/center_ano_dpo.html
+++ b/mainapp/templates/mainapp/center_ano_dpo.html
@@ -14,7 +14,7 @@
 
     <div class="row">
       <div class="col-xl-2">
-        <div class="header__inside__pages">О центре</div>
+        <div class="header__inside__pages">Об учебно-курсовом центре</div>
       </div>
       <div class="col-xl-4">
         <div class="headline_center">
@@ -96,86 +96,142 @@
             направлениям:
           </p>
           <div class="introduction_text_center">
-           <p>
+            <p>
               • предаттестационная подготовка руководителей и специалистов по вопросам промышленной безопасности,
-            энергетической безопасности и безопасности гидротехнических сооружений;
-           </p>
-           <p>
-              •	подготовка к подтверждению и повышению группы допуска по электробезопасности;
-           </p>
-           <p>
-              •	обучение и проверка знаний требований охраны труда руководителей,  специалистов  и уполномоченных по охране труда;
-           </p>
-           <p>
-              •	обучение пожарно-техническому минимуму руководителей, специалистов и работников  предприятий;
-           </p>
-           <p>
-              •	подготовка по профессиям;
-           </p>
-           <p>
-              •	подготовка по профессиям;
-           </p>
-           <p>
-              •	повышение квалификации, обучающие семинары и тренинги для руководителей  и специалистов;
-           </p>
-           <p>
-              •	подготовка специалистов по визуальному и измерительному контролю в соответствии с требованиями «Правил аттестации персонала в области неразрушающего контроля» (I и II уровень).
-           </p>
+              энергетической безопасности и безопасности гидротехнических сооружений;
+            </p>
+            <p>
+              • подготовка к подтверждению и повышению группы допуска по электробезопасности;
+            </p>
+            <p>
+              • обучение и проверка знаний требований охраны труда руководителей, специалистов и уполномоченных по
+              охране труда;
+            </p>
+            <p>
+              • обучение пожарно-техническому минимуму руководителей, специалистов и работников предприятий;
+            </p>
+            <p>
+              • подготовка по профессиям;
+            </p>
+            <p>
+              • подготовка по профессиям;
+            </p>
+            <p>
+              • повышение квалификации, обучающие семинары и тренинги для руководителей и специалистов;
+            </p>
+            <p>
+              • подготовка специалистов по визуальному и измерительному контролю в соответствии с требованиями «Правил
+              аттестации персонала в области неразрушающего контроля» (I и II уровень).
+            </p>
           </div>
           <div class="line_inside_pages"></div>
           <p class="small_text_center">
-             Организация укомплектована необходимым учебно-методическим и информационным обеспечением. Имеется необходимый библиотечный фонд учебных материалов для слушателей и преподавателей в печатном и электронном виде, который своевременно пополняется новыми материалами.
+            Организация укомплектована необходимым учебно-методическим и информационным обеспечением. Имеется
+            необходимый библиотечный фонд учебных материалов для слушателей и преподавателей в печатном и электронном
+            виде, который своевременно пополняется новыми материалами.
           </p>
-        
-          </div>
-        </div>
-        <div class="col-xl-1"></div>
-        <div class="col-xl-3 line_left">
-          <div class="box_right_column_center">
-              <div class="headline_right_column">
-                 Разрешительные документы
-                </div>
-               <div class="box_center_img">
-                  <main role="main">
-                      <p class="imglist">
-                          <a href="{% static 'img/sur_22_ac_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/sur_22_ac_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                          <a href="{% static 'img/sur_3csp_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/sur_3csp_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                          <a href="{% static 'img/acsm_62_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/acsm_62_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                          <a href="{% static 'img/acso_114_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/acso_114_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                          <a href="{% static 'img/acst_132_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/acst_132_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                          <a href="{% static 'img/dopusk_st_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/dopusk_st_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                          <a href="{% static 'img/IL_max.jpg' %}" data-fancybox="group1" data-type="image">
-                              <img src="{% static 'img/IL_min.jpg' %}" class="img-fluid img_box_center">
-                          </a>
-                      </p>
-                  </main>
-               </div>
+          <div class="line_inside_pages"></div>
+          <div class="doc_dpo">            
+            <div class="headline_doc_name">
+                Лицензия АНО ДПО Стандарт-Диагностика 2016
+            </div>
+            <main role="main">
+                <p class="imglist d-flex">
+                    <a href="{% static 'img/doc_dpo_6.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                        <img src="{% static 'img/doc_dpo_6.jpg' %}" class="img-fluid">
+                    </a>              
+                    <a href="{% static 'img/doc_dpo_5.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                        <img src="{% static 'img/doc_dpo_5.jpg' %}" class="img-fluid">
+                    </a>              
+                    <a href="{% static 'img/doc_dpo_4.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                        <img src="{% static 'img/doc_dpo_4.jpg' %}" class="img-fluid">
+                    </a>              
+                </p>
+            </main>
+            <div class="line_inside_pages"></div>
+            <div class="headline_doc_name">
+                Аккредитация по ОТ 2017
+            </div>
+            <main role="main">
+                <p class="imglist d-flex">
+                    <a href="{% static 'img/doc_dpo_3.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                        <img src="{% static 'img/doc_dpo_3.jpg' %}" class="img-fluid">
+                    </a>              
+                </p>
+            </main>
+            <div class="line_inside_pages"></div>
+            <div class="headline_doc_name">
+                Свидетельство НИКИМТ-Атомстрой
+            </div>
+            <main role="main">
+                <p class="imglist d-flex">
+                    <a href="{% static 'img/doc_dpo.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                        <img src="{% static 'img/doc_dpo.jpg' %}" class="img-fluid">
+                    </a>              
+                </p>
+            </main>
+            <div class="line_inside_pages"></div>
+            <div class="headline_doc_name">
+                Свидетельство СРО
+            </div>
+            <main role="main">
+                <p class="imglist d-flex">
+                    <a href="{% static 'img/doc_dpo_2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                        <img src="{% static 'img/doc_dpo_2.jpg' %}" class="img-fluid">
+                    </a>              
+                </p>
+            </main>
           </div>
         </div>
       </div>
-      
-      
-          <button class="back__to__main">
-            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
-                class="arrow__back__to__main text-align-center" alt="">
-              На главную</a>
-          </button>
+      <div class="col-xl-1"></div>
+      <div class="col-xl-3 line_left">
+        <div class="box_right_column_center">
+          <div class="headline_right_column">
+            Документы
+          </div>
+          <div class="box_doc_right_column_center_dpo">
+            <ul class="dpo_spisok_doc">
+              <a href="">
+                <li>Отчет о результатах самообследования</li>
+              </a>
+              <a href="">
+                <li>Положение о проведении самообследования</li>
+              </a>
+              <a href="">
+                <li>Правила внутреннего распорядка слушателей</li>
+              </a>
+              <a href="">
+                <li>Положение об оказании платных образовательных услуг</li>
+              </a>
+              <a href="">
+                <li>Правила приема обучающихся</li>
+              </a>
+              <a href="">
+                <li>Положение об итоговой аттестации</li>
+              </a>
+              <a href="">
+                <li>Оценка условий труда</li>
+              </a>
+              <a href="">
+                <li>Положение о сайте</li>
+              </a>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
 
+    <button class="back__to__main">
+      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+          class="arrow__back__to__main text-align-center" alt="">
+        На главную</a>
+    </button>
   </div>
+
+
+</div>
 
 </div>
 {% endblock  %}
