--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -5,19 +5,45 @@
                 <div class="col-xl-6">
                     <div class="bg__text">
                         <p class="bg__text__head">Группа компаний "Стандарт Диагностика"</p>
-                        <p class="bg__text__small">АНО ДПО «Стандарт-Диагностика» входит в Группу компаний «Диагностика», которая была основана в 1994 году.
-                            Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году. Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996г.
-                            </p>
                         <p class="bg__text__naks">ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемой
                             организации Ассоциация «НАКС».</p>
+                        <p class="bg__text__naks">ООО "НАКС Стандарт-Диагностика" является
+                            аттестационным центром НАКС по направлениям аттестации персонала, сварочных материалов,
+                            оборудования и технологий и внесен в реестр НАКС со следующими шифрами:.</p>
+                      <div class="box_acst_number">
+                        <a href="http://www.naks.ru/assp/reestrac/index.php?ID=540730639">
+                            СУР-22АЦ    
+                        </a>
+                        <a href="http://www.naks.ru/specpod/racsp/index.php?ID=540730640">
+                            СУР-3ЦСП
+                        </a>
+                        <a href="http://www.naks.ru/asm/racsm/index.php?ID=540730641">
+                            АЦСМ-62
+                        </a>
+                        <a href="http://www.naks.ru/aso/racso/index.php?ID=540730642">
+                            АЦСО-114
+                        </a>
+                        <a href="http://www.naks.ru/ast/racst/index.php?ID=540731108">
+                            АЦСТ-132
+                        </a>
+                      </div>
+                      <div class="line_bg_block"></div>
+                        <p class="bg__text__small">АНО ДПО «Стандарт-Диагностика» входит в Группу компаний
+                            «Диагностика», которая была основана в 1994 году.
+                            Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году.
+                            Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996г.
+                        </p>
                         <p class="naks__web">
-                            <a href="http://www.naks.ru"  target="_blank" title="Национальное Агентство Контроля Сварки">www.naks.ru
+                            <a href="http://www.naks.ru" target="_blank"
+                                title="Национальное Агентство Контроля Сварки">www.naks.ru
                                 &nbsp | &nbsp </a>
-                            <a href="http://www.spks.naks.ru" target="_blank" title="Совет по профессиональным квалификациям в области сварки">www.spks.naks.ru</a>
+                            <a href="http://www.spks.naks.ru" target="_blank"
+                                title="Совет по профессиональным квалификациям в области сварки">www.spks.naks.ru</a>
                         </p>
 
                         <div class="online__zayavka__button">
-                            <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Подать заявку</button>
+                            <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Подать
+                                заявку</button>
                         </div>
                     </div>
                 </div>
