--- a/mainapp/templates/mainapp/includes/footer.html
+++ b/mainapp/templates/mainapp/includes/footer.html
@@ -8,11 +8,22 @@
                     <img src="{% static 'img/logo_ac_footer.png' %}" alt="">
                 </div>
                 <div class="description">
-                    АНО ДПО «Стандарт-Диагностика» входит в Группу компаний «Диагностика», которая была основана в 1994 году.
-                    Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году. Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996 г.
+                    ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемой
+                    организации Ассоциация «НАКС».
+                </div>
+                <div class="description">
+                 ООО "НАКС Стандарт-Диагностика" является
+                    аттестационным центром НАКС по направлениям аттестации персонала, сварочных материалов,
+                    оборудования и технологий и внесен в реестр НАКС
+                </div>
+                <div class="description">
+                    АНО ДПО «Стандарт-Диагностика» входит в Группу компаний
+                    «Диагностика», которая была основана в 1994 году.
+                    Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году.
+                    Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996г.
                 </div>
 
-                <a href="{% url 'political' %}" class="political__footer">Политика конфиденциальности</a>
+                <a href="{% url 'political' %}#page-top" class="political__footer">Политика конфиденциальности</a>
                 <div class="line__footer__small"></div>
                 <div class="prava__footer">
                     © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
@@ -23,15 +34,12 @@
                 <p class="header__text__footer">Информация</p>
                 <div class="menu__footer">
                     <ul class="spisok__footer">
-                        <a href="{% url 'center' %}#page-top">
+                        <a href="{% url 'center_ano_dpo' %}#page-top">
                             <li>Центр аттестации</li>
-                        </a>                       
+                        </a>
                         <a href="{% url 'docs' %}">
                             <li>Документы</li>
-                        </a>
-                        <a href="{% url 'reestr' %}">
-                            <li>Реестр САСв</li>
-                        </a>
+                        </a>                           
                         <a href="{% url 'contact' %}">
                             <li>Контакты</li>
                         </a>
@@ -42,7 +50,7 @@
                 </div>
 
                 <div class="spks__link__footer">
-                   <img src="{% static 'img/spks__logo.png' %}" alt="">
+                    <img src="{% static 'img/spks__logo.png' %}" alt="">
                 </div>
             </div>
             <div class="col-md-3 col-xl-2">
@@ -83,14 +91,14 @@
                         Разработано в - НАКС Медиа
                     </p>
                     <div class="mob__version">
-                            <a href="{% url 'political' %}" class="mob__political__footer">Политика конфиденциальности</a>
-                            <div class="mob__line__footer__small"></div>
-                            <div class="mob__prava__footer">
-                                © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
-                            </div>
-                            <p class="mob__razrabotano">
-                                    Разработано в - НАКС Медиа
-                                </p>
+                        <a href="{% url 'political' %}" class="mob__political__footer">Политика конфиденциальности</a>
+                        <div class="mob__line__footer__small"></div>
+                        <div class="mob__prava__footer">
+                            © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
+                        </div>
+                        <p class="mob__razrabotano">
+                            Разработано в - НАКС Медиа
+                        </p>
                     </div>
                 </div>
             </div>
