--- a/mainapp/templates/mainapp/orgstruktura.html
+++ b/mainapp/templates/mainapp/orgstruktura.html
@@ -22,9 +22,13 @@
     <div class="row">
         <div class="col-xl-2"></div>
         <div class="col-xl-10">
-            <div class="box_img_struktura">
-                <img src="{% static 'img/org_struktura.png' %}" class="struktura" alt="">
-            </div>
+          <main role="main">
+            <p class="imglist">
+                <a href="{% static 'img/org_struktura.png' %}" class="img_box" data-fancybox="group1" data-type="image">
+                    <img src="{% static 'img/org_struktura.png' %}" class="img-fluid">
+                </a>              
+            </p>
+        </main>
         </div>
     </div>
 
