--- a/mainapp/templates/mainapp/political.html
+++ b/mainapp/templates/mainapp/political.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="box_content_page">
+<div class="box_content_page" id="page-top">
     <div class="container">   
 
         <button class="back__to__main">
