--- a/assets/scss/_legacy.scss
+++ b/assets/scss/_legacy.scss
@@ -279,6 +279,27 @@ a{
     text-align: center;
 }
 
+.box_acst_number{    
+    margin-bottom: 15px;
+}
+
+.box_acst_number a{
+    font-size: 14px;
+    margin-right: 10px;
+    margin-bottom: 15px;
+    color: #9fcdff;
+    font-weight: 450;
+}
+
+.line_bg_block{
+    border: 0.5px solid rgba(255, 255, 255, 0.26);
+    width: 150px;
+    margin-bottom: 10px;
+    @media screen and (max-width: 576px) {
+        width: 100%;
+    }
+}
+
 .bg__text__small {
     font-size: 16px;
     font-weight: 400;
@@ -357,7 +378,7 @@ a{
 
 .header__name {
     color: #000;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 500; 
     margin-bottom: 25px;   
     @media screen and (max-width: 576px) {
@@ -773,6 +794,7 @@ font-weight: 450;
 .footer__block {
     background-color: #f9f9f9;
     padding: 35px;
+    border-top: 15px solid #005bbb;
 
     @media screen and (max-width: 320px) {
         padding: 15px;
@@ -1605,6 +1627,21 @@ font-weight: 450;
     }
 }
 
+.box_doc_right_column_center_dpo ul{
+list-style: none;
+padding: 0px 25px;
+margin-top: 15px;
+li{
+    line-height: 1.8;
+    font-size: 14px;
+}
+}
+
+.headline_doc_name{
+    font-size: 18px;
+    font-weight: 350;
+    margin-bottom: 15px;
+}
 
 
 // Contact page
@@ -1948,8 +1985,12 @@ font-weight: 400;
 
 // Структура
 
+
 .struktura{
-    width: 1050px;;
+    width: 1050px;
+    @media screen and (max-width: 992px) {
+        width: 100%;
+    }
 }
 
 .subtitle_struktura{
