--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -100,6 +100,14 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .bg__text__head { font-size: 36px; font-weight: 550; color: #fff; text-align: center; }
 
+.box_acst_number { margin-bottom: 15px; }
+
+.box_acst_number a { font-size: 14px; margin-right: 10px; margin-bottom: 15px; color: #9fcdff; font-weight: 450; }
+
+.line_bg_block { border: 0.5px solid rgba(255, 255, 255, 0.26); width: 150px; margin-bottom: 10px; }
+
+@media screen and (max-width: 576px) { .line_bg_block { width: 100%; } }
+
 .bg__text__small { font-size: 16px; font-weight: 400; color: #fff; line-height: 1.8; }
 
 @media screen and (max-width: 320px) { .bg__text__small { font-size: 14px; } }
@@ -122,7 +130,7 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .naks__web { font-size: 14px; font-weight: 500; margin-bottom: 10px; }
 
-.header__name { color: #000; font-size: 28px; font-weight: 500; margin-bottom: 25px; }
+.header__name { color: #000; font-size: 24px; font-weight: 500; margin-bottom: 25px; }
 
 @media screen and (max-width: 576px) { .header__name { margin-top: 25px; } }
 
@@ -246,7 +254,7 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 @media screen and (max-width: 320px) { .spks__footer { display: none; } }
 
-.footer__block { background-color: #f9f9f9; padding: 35px; }
+.footer__block { background-color: #f9f9f9; padding: 35px; border-top: 15px solid #005bbb; }
 
 @media screen and (max-width: 320px) { .footer__block { padding: 15px; } }
 
@@ -461,6 +469,12 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 
 .img_box_center:hover { transition: 0.2s; -moz-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; -webkit-transition: all 0.2s ease-out; -webkit-transform: scale(1.01); -moz-transform: scale(1.01); -o-transform: scale(1.01); }
 
+.box_doc_right_column_center_dpo ul { list-style: none; padding: 0px 25px; margin-top: 15px; }
+
+.box_doc_right_column_center_dpo ul li { line-height: 1.8; font-size: 14px; }
+
+.headline_doc_name { font-size: 18px; font-weight: 350; margin-bottom: 15px; }
+
 .box_single_number { color: #004085; background-color: #cce5ff59; border-color: #b8daff; border-radius: 3px; padding: 10px 15px; }
 
 .box_single_number a { font-size: 24px; font-weight: 450; color: #005bbb; text-decoration: none; }
@@ -578,6 +592,8 @@ body { font-family: "Avenir Next Cyr", sans-serif; font-size: 12px; line-height:
 .page-link:focus { outline: none; box-shadow: none; }
 
 .struktura { width: 1050px; }
+
+@media screen and (max-width: 992px) { .struktura { width: 100%; } }
 
 .subtitle_struktura { font-size: 16px; font-weight: 350; margin-top: 15px; }
 
