--- a/mainapp/templates/mainapp/includes/menu.html
+++ b/mainapp/templates/mainapp/includes/menu.html
@@ -39,7 +39,7 @@
                         АЦ ООО "НАКС Стандарт-Диагностика"
                       </a>
                       <div class="sub-dropdown-menu dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'center' %}#page-top">Об аттестационном центре</a>
+                        <a class="dropdown-item" href="{% link_holder 'AC_NAKS_DIAGNOSTIKA' %}">{% title_holder 'AC_NAKS_DIAGNOSTIKA' %}</a>
                         <a class="dropdown-item" href="{% link_holder 'SUR_22AC' %}#page-top">Аттестация персонала сварочного производства (СУР-22АЦ, СУР-3ЦСП)</a>
                         <a class="dropdown-item" href="{% link_holder 'ACSM_62' %}#page-top">Аттестация сварочных материалов (АЦСМ-62)</a>
                         <a class="dropdown-item" href="{% link_holder 'ACSO_114' %}#page-top">Аттестация сварочного оборудования (АЦСО-114)</a>
@@ -51,7 +51,7 @@
                         УЦ АНО ДПО "Стандарт-Диагностика"
                       </a>
                       <div class="sub-dropdown-menu dropdown-menu">
-                        <a class="dropdown-item" href="{% link_holder 'ABOUT_ANO' %}#page-top">Об учебно-курсовом центре</a>
+                        <a class="dropdown-item" href="{% url 'center_ano_dpo' %}#page-top">Об учебно-курсовом центре</a>
                         <a class="dropdown-item" href="{% link_holder 'ANO_DOCS' %}#page-top">Разрешительные документы</a>
                         <a class="dropdown-item" href="{% link_holder 'PROGRAMS' %}#page-top">Профессиональная подготовка</a>
                         <a class="dropdown-item" href="{% link_holder 'QUALIFIKATION' %}#page-top">Повышение квалиификации</a>
