--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -4,12 +4,10 @@
             <div class="row">
                 <div class="col-xl-6">
                     <div class="bg__text">
-                        <p class="bg__text__head">Группа компаний "Стандарт Диагностика"</p>
-                        <p class="bg__text__naks">ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемой
-                            организации Ассоциация «НАКС».</p>
+                        <p class="bg__text__head">Группа компаний "Стандарт Диагностика"</p>                       
                         <p class="bg__text__naks">ООО "НАКС Стандарт-Диагностика" является
                             аттестационным центром НАКС по направлениям аттестации персонала, сварочных материалов,
-                            оборудования и технологий и внесен в реестр НАКС со следующими шифрами:.</p>
+                            оборудования и технологий и внесен в реестр НАКС со следующими шифрами:</p>
                       <div class="box_acst_number">
                         <a href="http://www.naks.ru/assp/reestrac/index.php?ID=540730639">
                             СУР-22АЦ    
